Tether: Do not log password of host hotspot.

Bug: 738233
Change-Id: I7c8f474904a4203ee7c069a674722c3bc60545c4
Reviewed-on: https://chromium-review.googlesource.com/575764
Commit-Queue: Ryan Hansberry <hansberry@chromium.org>
Commit-Queue: Kyle Horimoto <khorimoto@chromium.org>
Reviewed-by: Kyle Horimoto <khorimoto@chromium.org>
Cr-Commit-Position: refs/heads/master@{#487333}
Former-commit-id: a1d23fe4824cfb6c96ccb5c2752ca1bf467b59a6